Closed
Bug 1728802
Opened 5 years ago
Closed 5 years ago
Permanent jsreftest await test failures: SyntaxError: class static blocks are not currently supported item 1 when Gecko 93 merges to Beta on 2021-09-06
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
93 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | + | verified |
People
(Reporter: aryx, Assigned: mgaudet)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
- central-as-beta simulation
- How to run these simulations - you will either need to modify javascript engine or its tests, or request the jsreftests manually
- Failure log (2 tasks)
e.g. REFTEST TEST-UNEXPECTED-FAIL | js/src/tests/test262/language/expressions/function/static-init-await-binding.js | Unknown file:///builds/worker/workspace/build/tests/jsreftest/tests/js/src/tests/test262/language/expressions/function/static-init-await-binding.js:15: SyntaxError: class static blocks are not currently supported item 1
Flags: needinfo?(mgaudet)
Updated•5 years ago
|
Keywords: regression
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → mgaudet
Status: NEW → ASSIGNED
Pushed by mgaudet@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7d7573fb55d7
Remove overly paranoid guarding of class static block preference to allow riding the trains r=arai
Updated•5 years ago
|
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•