Bug 1728802 - Remove overly paranoid guarding of class static block preference to allow riding the trains r=arai

Differential Revision: https://phabricator.services.mozilla.com/D124465